--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
+    "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "redux": "^4.1.2",
+    "redux-logger": "^3.0.6",
     "redux-thunk": "^2.4.1",
     "thunk": "^0.0.1",
     "web-vitals": "^1.1.2"
